k8s/redis-deployment.yml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  redis-deployment
spec:
  selector:
    matchLabels:
      component: redis
  replicas: 1
  template:
    metadata:
      labels:
        component: redis
    spec:
      containers:
        - name:  redis
          image:  redis
          ports:
            - containerPort: 6379
