k8s/server-deployment.yml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  server-deployment
spec:
  selector:
    matchLabels:
      component: server
  replicas: 3
  template:
    metadata:
      labels:
       component: server
    spec:
      containers:
      - name:  server
        image:  stephengrider/multi-server
        ports:
        - containerPort:  5000
