k8s/worker-deployment.yml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  worker-deployment
spec:
  selector:
    matchLabels:
      component: worker
  replicas: 1
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name:  worker
          image:  stephengrider/multi-worker
