k8s/client-cluster-ip-service.yml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
  namespace: default
spec:
  selector:
    component: web
  type: ClusterIP
  ports:
  - name: client-cluster-ip-service
    protocol: TCP
    port: 3000
    targetPort: 3000
