k8s/postgres-cluster-ip-service.yml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  selector:
    component: postgres
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
