k8s/redis-cluster-ip-service.yml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec:
  selector:
    component: redis
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
